好不容易改了一大堆，今天又要往回改，只能提交一个版本，以防之后改回来

--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -315,4 +315,7 @@
 
     <!--reserved list-->
     <string name="buy">买单</string>
+
+    <!--房型-->
+    <string name="housetype" >小包（2-5人）</string>
 </resources>
