--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -322,4 +322,13 @@
 
     <!--房型-->
     <string name="housetype" >小包（2-5人）</string>
+
+    <!--房态-->
+    <string name="housenews_use" >使用</string>
+    <string name="housenews_book" >已定</string>
+    <string name="housenews_free" >空闲</string>
+    <string name="housenews_typename" >类型</string>
+    <string name="housenews_housename" >房间名称</string>
+    <string name="housenews_lowest" >最低消费</string>
+    <string name="housenews_housenews" >房态</string>
 </resources>
