--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -324,6 +324,8 @@
     <string name="drinks_price">酒水价格</string>
     <string name="drinks_action">商家活动</string>
     <string name="drinks_action_detail">买一送一</string>
+    <string name="drinks_price_1">¥</string>
+    <string name="drinks_price_2">/瓶</string>
 
     <!--order to complete-->
     <string name="order_to_complete">预订进行中...</string>
@@ -336,6 +338,8 @@
 
     <!--房型-->
     <string name="housetype">小包（2-5人）</string>
+    <string name="housetype_symbol">（</string>
+    <string name="housetype_symbol2">人）</string>
 
     <!--房态-->
     <string name="housenews_use">使用</string>
