--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="all_comment">查看全部评价</string>
     <string name="no_data">没有数据</string>
     <string name="city_select">请选择</string>
+    <string name="qiyu_title">去哪儿客服</string>
 
     <!--上拉加载，下拉刷新-->
     <string name="head">这里是HeadView</string>
