--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="agreement_left">注册即表示同意</string>
     <string name="agreement_right">《乐互网用户协议》</string>
     <string name="register_time">注册时间: </string>
+    <string name="register_verifyTime">%1$ds后重新获取</string>
 
     <!--Tab-->
     <string name="reserve">预订</string>
