--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="loading">正在加载...</string>
     <string name="load_succeed">加载成功</string>
     <string name="load_fail">加载失败</string>
+    <string name="load_no_more">没有更多了哦</string>
 
     <!--自定义进度弹窗-->
     <string name="hard_loading">正在加载中</string>
@@ -212,7 +213,7 @@
     <string name="use_deadline">使用时间：</string>
     <string name="arrive_with_cash">(可抵现金)</string>
     <string name="rmb">RMB</string>
-    <string name="where_to_play_discount_coupon">去哪儿优惠券</string>
+    <string name="where_to_play_discount_coupon">乐互网优惠券</string>
     <string name="currency_char">¥</string>
 
     <!--integral-->
