--- a/WhereToPlay/app/src/main/res/values/strings.xml
+++ b/WhereToPlay/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <string name="collection">收藏</string>
     <string name="referral">推荐</string>
     <string name="drive">代驾</string>
-    <string name="friend">推荐好友</string>
+    <string name="friend">团队成员</string>
     <string name="money">推荐奖励</string>
     <string name="mine_service">客服</string>
     <string name="money_time">注册时间：%1$s</string>
